# golem-cli

./: Cargo.toml  Makefile.toml  log.1  log.json
golem/: Cargo.toml
golem-cli/: Cargo.toml
golem-cli/src/: cloud.rs  command.rs  config.rs  log.rs
golem-cli/src/app/: context.rs
golem-cli/src/command_handler/: app.rs  interactive.rs  mod.rs  plugin.rs
golem-cli/src/command_handler/api/: definition.rs  deployment.rs  security_scheme.rs
golem-cli/src/command_handler/api/cloud/: certificate.rs  domain.rs
golem-cli/src/command_handler/cloud/: token.rs
golem-cli/src/command_handler/cloud/account/: grant.rs  mod.rs
golem-cli/src/command_handler/cloud/project/: plugin.rs  policy.rs
golem-cli/src/command_handler/component/: mod.rs  plugin.rs
golem-cli/src/command_handler/mcp_server/: handler.rs  mod.rs  tools.rs
golem-cli/src/command_handler/mcp_server/tools/: app.rs
golem-cli/src/command_handler/mcp_server/tools/api/: security_scheme.rs
golem-cli/src/command_handler/mcp_server/tools/api/cloud/: certificate.rs
golem-cli/src/command_handler/mcp_server/tools/cloud/: token.rs
golem-cli/src/command_handler/mcp_server/tools/component/: mod.rs
golem-cli/src/command_handler/mcp_server/tools/profile/: mod.rs
golem-cli/src/command_handler/profile/: config.rs  mod.rs
golem-cli/src/command_handler/worker/: mod.rs
golem-cli/src/model/: api.rs  app.rs  app_raw.rs  component.rs  mod.rs
golem-cli/src/model/deploy_diff/: component.rs
golem-cli/src/model/text/: component.rs  worker.rs
golem-cli/src/wasm_rpc_stubgen/: wit_generate.rs
golem-templates/: Cargo.toml
golem-templates/src/: model.rs
