[package]
name = "golem"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud/"
repository = "https://github.com/golemcloud/golem-cli"
readme = "README.md"
description = "Single Golem executable for testing"

[lib]
harness = false

[[bin]]
name = "golem"
path = "src/main.rs"
test = false

[dependencies]
# Repo deps
golem-cli = { path = "../golem-cli", features = [
    "server-commands",
], version = "=0.0.0" }

# Golem - git deps
golem-common = { path="../../golem-fork/golem-common", version="=0.0.0"}
golem-service-base = { path="../../golem-fork/golem-service-base", version="=0.0.0"}
golem-component-compilation-service = { path="../../golem-fork/golem-component-compilation-service", version="=0.0.0"}
golem-component-service = { path="../../golem-fork/golem-component-service", version="=0.0.0"}
golem-component-service-base = { path="../../golem-fork/golem-component-service-base", version="=0.0.0"}
golem-shard-manager = { path="../../golem-fork/golem-shard-manager", version="=0.0.0"}
golem-worker-executor = { path="../../golem-fork/golem-worker-executor", version="=0.0.0"}
golem-worker-executor-base = { path="../../golem-fork/golem-worker-executor-base", version="=0.0.0"}
golem-worker-service = { path="../../golem-fork/golem-worker-service", version="=0.0.0"}
golem-worker-service-base = { path="../../golem-fork/golem-worker-service-base", version="=0.0.0"}


# External deps
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
darling = { workspace = true }
dirs = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
futures = { workspace = true }
include_dir = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-prometheus = { workspace = true }
opentelemetry_sdk = { workspace = true }
poem = { workspace = true }
prometheus = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
test-r = { workspace = true }
